--- a/discord.html
+++ b/discord.html
@@ -1,64 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Discord</title>
-    <link rel="stylesheet" href="discord.css" />
-    <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-/>
 
-  </head>
-  <body>
-<header class="header">
-  <nav class="navbar">
-    <div class="logo">
-      <img src="/assets/discord-logo.svg" alt="Discord" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Discord</title>
+  <link rel="stylesheet" href="discord.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+</head>
+
+<body>
+  <header class="header">
+    <nav class="navbar">
+      <div class="logo">
+        <img src="/assets/discord-logo.svg" alt="Discord" />
+      </div>
+
+      <div class="mobile-header">
+        <img src="/assets/discord.webp" alt="Discord-image" class="discord-logo">
+        <button class="hamburger">
+          <i class="fas fa-bars"></i>
+        </button>
+      </div>
+
+      <div class="nav-container">
+        <ul class="nav-links">
+          <li><a href="#">Download</a></li>
+          <li><a href="#">Nitro</a></li>
+          <li><a href="#">Discover</a></li>
+          <li><a href="#">Safety</a></li>
+          <li><a href="#">Quests</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Developers</a></li>
+          <li><a href="#">Careers</a></li>
+        </ul>
+        <div class="nav-buttons">
+          <button class="login-btn">Log In</button>
+          <div class="btn">Download for Windows</div>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <div class="hero-text">
+      <h1>Group Chat That's All Fun & Games</h1>
+      <p>
+        Discord is great for playing games and chilling with friends, or even
+        building a worldwide community. Customise your own space to talk,
+        play, and hang out.
+      </p>
     </div>
-
-    <div class="hamburger">
-      <i class="fas fa-bars"></i>
+    <div class="hero-image">
+      <img src="/assets/img1.webp" alt="Discord Hero Image" />
     </div>
-
-    <div class="nav-container">
-      <ul class="nav-links">
-        <li><a href="#">Download</a></li>
-        <li><a href="#">Nitro</a></li>
-        <li><a href="#">Discover</a></li>
-        <li><a href="#">Safety</a></li>
-        <li><a href="#">Quests</a></li>
-        <li><a href="#">Support</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Developers</a></li>
-        <li><a href="#">Careers</a></li>
-      </ul>
-      <button class="login-btn">Log In</button>
-    </div>
-  </nav>
-</header>
-
-
-    <section class="hero">
-      <div class="hero-text">
-        <h1>Group Chat That's All Fun & Games</h1>
+  </section>
+  <div class="download">
+    <div class="btn-1">&#10515 Download for Windows</div>
+    <div class="btn-2">Open Discord in your browser</div>
+  </div>
+  <div class="gif">
+    <img src="/assets/gif1.gif" alt="Chat GIF" class="fun-chat-gif" />
+  </div>
+  <section class="fun-chat-section">
+    <div class="fun-chat-container">
+      <div class="fun-chat-left">
+        <video src="/assets/video1.mp4" autoplay muted loop class="fun-chat-video"></video>
+      </div>
+      <div class="fun-chat-right">
+        <h2>MAKE YOUR GROUP CHATS MORE FUN</h2>
         <p>
-          Discord is great for playing games and chilling with friends, or even
-          building a worldwide community. Customise your own space to talk,
-          play, and hang out.
+          Use custom emoji, stickers, soundboard effects and more to add your personality
+          to your voice, video, or text chat. Set your avatar and a custom status, and write
+          your own profile to show up in chat your way.
         </p>
       </div>
-      <div class="hero-image">
-        <img src="/assets/img1.webp" alt="Discord Hero Image" />
-      </div>
-    </section>
-    <div class="download">
-      <div class="btn-1">&#10515 Download for Windows</div>
-      <div class="btn-2">Open Discord in your browser</div>
     </div>
+  </section>
+  <section class="fun-chat-section">
+    <div class="fun-chat-container">
+      <div class="fun-chat-right">
+        <h2>Stream like you’re in the same room</h2>
+        <p>
+          High quality and low latency streaming makes it feel like you're hanging out on the couch with friends while
+          playing a game, watching shows, looking at photos, or idk doing homework or something.
+        </p>
+      </div>
+      <div class="fun-chat-left">
+        <video src="/assets/video2.mp4" autoplay muted loop class="fun-chat-video"></video>
+      </div>
+    </div>
+  </section>
 
-    <footer></footer>
-    <script src="discord.js"></script>
-  </body>
+  <div class="tape-container">
+    <div class="tape-line">
+      <div class="tape-item">Talk <img src="/assets/discord.webp" alt="discord"></div>
+      <div class="tape-item">Play <img src="/assets/discord.webp" alt="discord"></div>
+      <div class="tape-item">CHAT <img src="/assets/discord.webp" alt="discord"></div>
+      <div class="tape-item">Hang out <img src="/assets/discord.webp" alt="discord"></div>
+      <div class="tape-item">Talk <img src="/assets/discord.webp" alt="discord"></div>
+      <div class="tape-item">Play <img src="/assets/discord.webp" alt="discord"></div>
+      <div class="tape-item">CHAT <img src="/assets/discord.webp" alt="discord"></div>
+      <div class="tape-item">Hang out <img src="/assets/discord.webp" alt="discord"></div>
+    </div>
+  </div>
+
+  <div class="text">
+    <p>YOU CAN'T SCROLL ANYMORE.</p>
+    <p>BETTER GO CHAT.</p>
+    <button>&#10515 Download for Windows</button>
+  </div>
+
+
+  <footer class="f-container">
+    <div class="footer-bg1"><img src="/assets/footer1.webp" alt="" srcset=""></div>
+    <div class="footer-bg2"><img src="/assets/footer2.png" alt="" srcset=""></div>
+
+    <div class="custom-footer">
+      <div class="footer-container">
+        <!-- Left Section -->
+        <div class="footer-left">
+          <img src="/assets/discord.webp" alt="Discord Logo" class="discordlogo">
+          <div class="language-selector">
+            <label for="language">Language</label>
+            <select id="language">
+              <option>English (UK)</option>
+            </select>
+          </div>
+          <div class="social-icons">
+            <a href="#"><i class="fab fa-x-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-tiktok"></i></a>
+          </div>
+        </div>
+
+        <!-- Right Section -->
+        <div class="footer-right">
+          <div class="footer-column">
+            <h4>Product</h4>
+            <a href="#">Download</a>
+            <a href="#">Nitro</a>
+            <a href="#">Status</a>
+            <a href="#">App Directory</a>
+          </div>
+
+          <div class="footer-column">
+            <h4>Company</h4>
+            <a href="#">About</a>
+            <a href="#">Jobs</a>
+            <a href="#">Brand</a>
+            <a href="#">Newsroom</a>
+          </div>
+
+          <div class="footer-column">
+            <h4>Resources</h4>
+            <a href="#">College</a>
+            <a href="#">Support</a>
+            <a href="#">Safety</a>
+            <a href="#">Blog</a>
+            <a href="#">StreamKit</a>
+            <a href="#">Creators</a>
+            <a href="#">Community</a>
+            <a href="#">Developers</a>
+            <a href="#">Quests</a>
+            <a href="#">Offical Third-Part Merch</a>
+            <a href="#">Feedback</a>
+
+          </div>
+
+          <div class="footer-column">
+            <h4>Policies</h4>
+            <a href="#">Terms</a>
+            <a href="#">Privacy</a>
+            <a href="#">Cookie Settings</a>
+            <a href="#">Guidelines</a>
+            <a href="#">Acknowledgements</a>
+            <a href="#">Licences</a>
+            <a href="#">Company Information</a>
+          </div>
+        </div>
+      </div>
+      <p>Discord</p>
+    </div>
+  </footer>
+  <script src="discord.js"></script>
+</body>
+
 </html>
