--- a/discord.html
+++ b/discord.html
@@ -16,7 +16,7 @@
         <img src="/assets/discord-logo.svg" alt="Discord" />
       </div>
 
-      
+
       <div class="nav-container">
         <div class="mobile-header">
           <!-- <img src="/assets/discord.webp" alt="Discord-image" class="discord-logo"> -->
@@ -24,22 +24,40 @@
             <i class="fas fa-bars"></i>
           </button>
         </div>
-         <img src="/assets/discord.webp" alt="Discord-image" class="discord-logo">
+        <img src="/assets/discord.webp" alt="Discord-image" class="discord-logo">
         <ul class="nav-links">
           <li><a href="#">Download</a></li>
           <li><a href="#">Nitro</a></li>
           <li><a href="#">Discover</a></li>
-          <li><a href="#">Safety</a></li>
-          <li><a href="#">Quests</a></li>
+          <li class="dropdown">
+            <a href="#">Safety <i class="fas fa-angle-down"></i></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">User Safety</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#">Quests <i class="fas fa-angle-down"></i></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Available Quests</a></li>
+              <li><a href="#">How it Works</a></li>
+            </ul>
+          </li>
           <li><a href="#">Support</a></li>
-          <li><a href="#">Blog</a></li>
+          <li class="dropdown">
+            <a href="#">Blog <i class="fas fa-angle-down"></i></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Latest Posts</a></li>
+              <li><a href="#">News</a></li>
+            </ul>
+          </li>
           <li><a href="#">Developers</a></li>
           <li><a href="#">Careers</a></li>
         </ul>
-      <div class="nav-buttons">
-        <button class="login-btn">Log In</button>
-        <div class="btn">Download for Windows</div>
-      </div>
+        <div class="nav-buttons">
+          <button class="login-btn">Log In</button>
+          <div class="btn">Download for Windows</div>
+        </div>
       </div>
       <div class="nav-buttons1">
         <button class="login-btn">Log In</button>
@@ -119,8 +137,8 @@
 
 
   <footer class="f-container">
-    <div class="footer-bg1"><img src="/assets/footer1.webp" alt="" srcset=""></div>
-    <div class="footer-bg2"><img src="/assets/footer2.png" alt="" srcset=""></div>
+    <div class="footer-bg1"><img src="/assets/footer1.webp" alt="footer-img" srcset=""></div>
+    <div class="footer-bg2"><img src="/assets/footer2.png" alt="footer-img" srcset=""></div>
 
     <div class="custom-footer">
       <div class="footer-container">
